# budget-vr-tracker

./: .gitignore  README.md  download_models.sh  init_openvr_sdk.sh  requirements.txt  run_tracker.sh
docs/: GITHUB_SETUP.md  WEB_VIEWER.md
driver/: CMakeLists.txt  driver.vrdrivermanifest
driver/src/: controller_device.cpp  controller_device.h  device_provider.cpp  device_provider.h  main.cpp  pipe_server.cpp  pipe_server.h  tracker_device.cpp  tracker_device.h
tests/: test_tracking.py
tools/: install_driver.py
tracker/: __init__.py  camera_manager.py  config.py  coordinate_fusion.py  hand_tracker.py  main.py  pose_tracker.py  steamvr_bridge.py  web_viewer.py
